CHANGES IN VERSION 1.3.15
------------------------
 o geom_tiplab and geom_tiplab2 support using geom_label2 by passing geom="label" <2016-04-07, Thu>
 o geom_label2 that support subsetting <2016-04-07, Thu>
 o geom_tiplab2 for adding tip label of circular layout <2016-04-06, Wed>
 o use plot$plot_env to access ggplot2 parameter <2016-04-06, Wed>
 o geom_taxalink for connecting related taxa <2016-04-01, Fri> 
 o geom_range for adding range of HPD to present uncertainty of evolutionary inference <2016-04-01, Fri>
 
CHANGES IN VERSION 1.3.14
------------------------
 o geom_tiplab works with NA values, compatible with collapse <2016-03-05, Sat>
 o update theme_tree2 due to the issue of https://github.com/hadley/ggplot2/issues/1567 <2016-03-05, Sat>
 o offset works in `align=FFALSE` with `annotation_image` function <2016-02-23, Tue>
   + see https://github.com/GuangchuangYu/ggtree/issues/46
 o subview and inset now supports annotating with img files <2016-02-23, Tue>
 
CHANGES IN VERSION 1.3.13
------------------------
 o add example of rescale_tree function in treeAnnotation.Rmd <2016-02-07, Sun>
 o geom_cladelabel works with collapse <2016-02-07, Sun>
   + see https://github.com/GuangchuangYu/ggtree/issues/38 

CHANGES IN VERSION 1.3.12
------------------------
 o exchange function name of geom_tree and geom_tree2  <2016-01-25, Mon>
 o solved issues of geom_tree2 <2016-01-25, Mon>
   + https://github.com/hadley/ggplot2/issues/1512
 o colnames_level parameter in gheatmap <2016-01-25, Mon>
 o raxml2nwk function for converting raxml bootstrap tree to newick format <2016-01-25, Mon> 
 
CHANGES IN VERSION 1.3.11
------------------------
 o solved issues of geom_tree2 <2016-01-25, Mon>
   + https://github.com/GuangchuangYu/ggtree/issues/36
 o change compute_group() to compute_panel in geom_tree2() <2016-01-21, Thu>
   + fixed issue, https://github.com/GuangchuangYu/ggtree/issues/36
 o support phyloseq object <2016-01-21, Thu>