@@ -38,7 +38,7 @@ geom_tiplab <- function(mapping=NULL, hjust = 0, align = FALSE, linetype = "dott
     if (align && (!is.na(linetype) && !is.null(linetype))) {
         dot_mapping <- aes(xend=x+diff(range(x, na.rm=TRUE))/200, x=max(x, na.rm=TRUE), y=y, yend=y, subset=isTip)
         if (!is.null(mapping)) {
-            dot_mapping <- modifyList(dot_mapping, mapping)
+            dot_mapping <- modifyList(mapping, dot_mapping)
         }
     } 
     
@@ -63,12 +63,13 @@ geom_tiplab <- function(mapping=NULL, hjust = 0, align = FALSE, linetype = "dott
 ##' 
 ##' @title geom_tiplab2
 ##' @param mapping aes mapping
+##' @param hjust horizontal adjustment
 ##' @param ... additional parameter, see geom_tiplab
 ##' @return tip label layer
 ##' @export
 ##' @author Guangchuang Yu
 ##' @references \url{https://groups.google.com/forum/#!topic/bioc-ggtree/o35PV3iHO-0}
-geom_tiplab2 <- function(mapping=NULL, ...) {
+geom_tiplab2 <- function(mapping=NULL, hjust=0, ...) {
 
     angle <- NULL
     m1 <- aes(subset=(abs(angle) < 90), angle=angle)
@@ -79,7 +80,7 @@ geom_tiplab2 <- function(mapping=NULL, ...) {
         m2 <- modifyList(mapping, m2)
     }
 
-    list(geom_tiplab(m1, ...),
-         geom_tiplab(m2, hjust=1, ...)
+    list(geom_tiplab(m1, hjust=hjust, ...),
+         geom_tiplab(m2, hjust=1-hjust, ...)
          )
 }
